--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -109,13 +109,13 @@
         android:layout_width="400dp"
         android:layout_height="41dp"
         android:layout_centerHorizontal="true"
-        android:padding="5dp"
         android:layout_marginTop="310dp"
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="344dp"
         android:background="@drawable/log_in_box"
         android:hint="@string/input_user_account"
-        android:maxLines="1" />
+        android:maxLines="1"
+        android:padding="5dp" />
 
     <EditText
         android:id="@+id/password"
